--- a/costura/templates/layout.html
+++ b/costura/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -16,6 +17,7 @@
             <li><a href="/"><i class="fas fa-home"></i>Dashboard</a></li>
             <li><a href="{% url "ordens:ordens" %}"><i class="fas fa-clipboard-list"></i>Ordens de Serviço</a></li>
             <li><a href="{% url "servicos:servicos" %}"><i class="fas fa-wrench"></i>Cadastrar Serviço/Alterar Valor</a></li>
+            <li><a href="{% url "cliente:clientes" %}"><i class="fas "></i>Dados dos Clientes</a></li>
         </ul>
     </div>
     <div class="main-content">
@@ -25,5 +27,6 @@
             {% endblock content%}
         </div>
     </div>
+    <script src='{% static "js/scripts.js" %}' ></script>
 </body>
 </html>
