--- a/costura/static/css/styles.css
+++ b/costura/static/css/styles.css
@@ -81,6 +81,15 @@ h1 {
     }
 }
 
+.modal::before {
+    content: '';
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+
 .card form {
     display: flex;
     flex-direction: column;
