--- a/costura/cliente/templates/cliente/ordens_cliente.html
+++ b/costura/cliente/templates/cliente/ordens_cliente.html
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div >
-    <table class='tabela-cliente-ordem table table-striped'>
+    <table class='tabela-cliente-ordem table table-striped table-light'>
         <thead>
             <th>ID</th>
             <th>Data do pedido</th>
