--- a/costura/ordens/templates/ordens/edit_order.html
+++ b/costura/ordens/templates/ordens/edit_order.html
@@ -48,7 +48,7 @@
 <p><strong>Total:</strong> {{ total }}</p>
 
         
-            <table class="table table-striped center">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Quantidade</th>
