--- a/costura/templates/dashboard.html
+++ b/costura/templates/dashboard.html
@@ -10,7 +10,7 @@
 <p><del>adicionar modal no ORDENS DE SERVICO</del></p>
 
 
-<table class='tabela-cliente-ordem table table-striped sortable'>
+<table class='tabela-cliente-ordem table table-striped sortable table-light'>
     <thead>
         <tr>
             <th>ID</th>
