--- a/costura/templates/dashboard.html
+++ b/costura/templates/dashboard.html
@@ -6,7 +6,7 @@
 
 <p>Cadastrar costureira</p>
 <p><del>adicionar status ao model</del></p>
-<p> adicionar coisas do cliente ao model</p>
+<p> <del>adicionar coisas do cliente ao model</del></p>
 <p><del>adicionar modal no ORDENS DE SERVICO</del></p>
 
 
@@ -45,4 +45,8 @@
 
 </table>
 
+
+<script>
+    
+</script>
 {% endblock %}
