--- a/costura/templates/dashboard.html
+++ b/costura/templates/dashboard.html
@@ -46,7 +46,10 @@
 </table>
 
 
-<script>
-    
-</script>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $(document).ready(colorEntrega());
+    </script>
+{% endblock js %}
