--- a/costura/ordens/templates/ordens/new_order.html
+++ b/costura/ordens/templates/ordens/new_order.html
@@ -6,7 +6,7 @@
     <form method='post'>
         {% csrf_token %}
         {{form.cliente.label}}: {{form.cliente}}
-        Data de entrega:: {{form.data_entrega}}
+        Data de entrega: {{form.data_entrega}}
         <button type="submit">Salvar</buttxson>
     </form>
 </div>
@@ -15,8 +15,9 @@
 
 {% endblock %}
 {% block js %}
-    <script>
+<script>
+    $(document).ready(function() {
         $('#id_cliente').select2();
-    </script>
-
+    });
+</script>
 {% endblock js %}
