--- a/costura/templates/layout.html
+++ b/costura/templates/layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"  />
 
     <title>OS System</title>
 </head>
@@ -20,6 +20,7 @@
             <li><a href="{% url "ordens:ordens" %}"><i class="fas fa-clipboard-list"></i>Ordens de Serviço</a></li>
             <li><a href="{% url "servicos:servicos" %}"><i class="fas fa-wrench"></i>Cadastrar Serviço/Alterar Valor</a></li>
             <li><a href="{% url "cliente:clientes" %}"><i class="fas "></i>Dados dos Clientes</a></li>
+            <li><a href="{% url "costureiras:main" %}"><i class="fas "></i>Costureiras</a></li>
         </ul>
     </div>
     <div class="main-content">
