--- a/costura/static/css/styles.css
+++ b/costura/static/css/styles.css
@@ -7,6 +7,13 @@ body {
     min-height: 100vh;
 }
 
+.top-dir {
+    position: absolute;
+    margin: 20px;
+    top: 0;
+    right: 0;
+}
+
 .sidebar {
     width: 250px;
     background-color: #fff;
