--- a/costura/ordens/templates/ordens/orders.html
+++ b/costura/ordens/templates/ordens/orders.html
@@ -10,7 +10,6 @@
             <p>Cliente: {{ order.cliente }}</p>
             <p>Data do Pedido: {{ order.data_pedido|date:'d / M / y    (H:m)' }}</p>
             <p>Data Para Entrega: {{ order.data_entrega|date:'d / M / y' }} </p>
-            <p>Status: {{order.get_status_display}}</p>
             <div>
                 <a  href="{{ order.get_delete_order }}" class="top-dir"
                     onclick="return confirm('Tem certeza que deseja excluir este serviço?');">
@@ -27,7 +26,7 @@
                     </div>
                     <div>
                         <!-- Botão para abrir o modal -->
-                        <button class="btn btn-primary" onclick="openModal({{ order.id }})">Status
+                        <button class="btn btn-primary" onclick="openModal({{ order.id }})">{{order.get_status_display}}
                         </button>
                     </div>
                 </div>
